--- a/app/src/main/res/layout/adapter_upcoming_reminders.xml
+++ b/app/src/main/res/layout/adapter_upcoming_reminders.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
     xmlns:card_view="http://schemas.android.com/tools"
-    card_view:cardUseCompatPadding="true"
-    android:layout_marginRight="16dp"
+    android:id="@+id/cardView_UpcomingReminders"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
     android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     android:layout_marginTop="16dp"
+    android:background="@drawable/selector_row"
     android:clickable="true"
-    android:layout_marginBottom="16dp">
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardPreventCornerOverlap="false"
+    card_view:cardUseCompatPadding="true">
     <TextView
+        android:id="@+id/textViewTitleUpComingEvents"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:paddingLeft="10dp"
-        android:textSize="20sp"
-        android:id="@+id/textViewTitleUpComingEvents"/>
+        android:textSize="20sp"/>
 
 </android.support.v7.widget.CardView>
 
