Added navigation menu To add menu items

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,8 @@
         <item>@color/welcome_dot_dark_screen4</item>
     </array>
 
+    <!--Other Colors-->
+    <color name="grey">#9E9E9E</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
