Added ViewReminder Activity To do basic adapter changes to the ViewReminder activity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="ViewReminderTheme" parent="AppTheme" >
+        <item name="colorAccent">@color/lime</item>
+        <item name="colorPrimaryDark">@color/amberDark</item>
+        <item name="colorPrimary">@color/amber</item>
+    </style>
+
+
 </resources>
