--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,5 +41,8 @@
     <!--Other Colors-->
     <color name="grey">#9E9E9E</color>
     <color name="white">#FFFFFF</color>
+    <color name="amberDark">#FFA000</color>
+    <color name="amber">#FFC107</color>
+    <color name="lime">#FFEB3B</color>
 
 </resources>
