--- a/app/src/main/res/layout/activity_view_reminder.xml
+++ b/app/src/main/res/layout/activity_view_reminder.xml
@@ -46,8 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/viewReminder_toolbar"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"></android.support.v7.widget.RecyclerView>
+            android:layout_marginRight="20dp"></android.support.v7.widget.RecyclerView>
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
