--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,6 @@
     <color name="white">#FFFFFF</color>
     <color name="amberDark">#FFA000</color>
     <color name="amber">#FFC107</color>
-    <color name="lime">#FFEB3B</color>
+    <color name="lime">#CDDC39</color>
 
 </resources>
