Reminder Complete except for notification for later date coming at same time

--- a/app/src/main/res/layout/activity_view_reminder.xml
+++ b/app/src/main/res/layout/activity_view_reminder.xml
@@ -23,7 +23,7 @@
                 android:layout_marginTop="50dp">
 
                 <TextView
-                    android:id="@+id/textView_ViewReminderTitle"
+                    android:id="@+id/titleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -32,12 +32,13 @@
                     android:textSize="20dp" />
 
                 <TextView
+                    android:id="@+id/textView_ViewReminderTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/textView_ViewReminderTitle"
+                    android:layout_below="@id/titleText"
                     android:layout_marginBottom="20dp"
                     android:layout_marginLeft="10dp"
-                    android:text="User Defined Title"
+                    android:text=""
                     android:textSize="30dp" />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
@@ -50,6 +51,7 @@
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_editTitle_Reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
