--- a/app/src/main/res/layout/adapter_reminders.xml
+++ b/app/src/main/res/layout/adapter_reminders.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:autofit="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:id="@+id/cardView_UpcomingReminders"
+    android:id="@+id/cardView_Reminders"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
@@ -21,7 +21,7 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/textViewTitleUpComingEvents"
+            android:id="@+id/textViewTitleEvents"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -30,7 +30,7 @@
             android:textColor="@android:color/black"
             android:textSize="20sp" />
         <TextView
-            android:id="@+id/textView_upcomingRemindersDescription"
+            android:id="@+id/textView_RemindersDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
@@ -51,7 +51,7 @@
                 android:layout_marginRight="5dp"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/textView_upcomingRemindersDate"
+                    android:id="@+id/textView_RemindersDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -65,7 +65,7 @@
                     android:layout_marginRight="5dp"
                     android:src="@drawable/ic_alarm_on_black_24dp"/>
                 <TextView
-                    android:id="@+id/textView_upcomingRemindersTime"
+                    android:id="@+id/textView_RemindersTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
