--- a/app/src/main/res/menu/drawer_header_menu.xml
+++ b/app/src/main/res/menu/drawer_header_menu.xml
@@ -4,17 +4,22 @@
     <group android:checkableBehavior="single">
         <item android:id="@+id/navigation_item_upcoming_reminder"
             android:checked="true"
+            android:icon="@drawable/ic_schedule_white_24dp"
             android:title="@string/upcoming_reminder"></item>
         <item
             android:id="@+id/navigation_item_reminder"
             android:title="@string/reminder" />
         <item
             android:id="@+id/navigation_item_location_based_reminder"
+            android:icon="@drawable/ic_place_white_24dp"
             android:title="@string/location_based_reminder" />
         <item
             android:id="@+id/navigation_item_notes"
-            android:title="@string/notes" />
+            android:icon="@drawable/ic_insert_drive_file_white_24dp"
+            android:title="@string/notes"/>
+
         <item android:id="@+id/navigation_item_recycle_bin"
+            android:icon="@drawable/ic_delete_white_24dp"
             android:title="@string/recycle_bin"/>
     </group>
 
